# Geoserver_resources

./: README.md  pyproject.toml
Dashboards/: bd_OIAPOQUE_workshop.qgz  mosqgeoserver.py  mudanca_urbanizacao.py  test_mosqgeoserver.py
Notebooks Google Colab/AP - terraclass x mapbiomas/: Amapa_terraclass_mapbiomas_2008.ipynb  Amapa_terraclass_mapbiomas_2010.ipynb  Amapa_terraclass_mapbiomas_2012.ipynb  Amapa_terraclass_mapbiomas_2014.ipynb  Amapa_terraclass_mapbiomas_2018.ipynb  Amapa_terraclass_mapbiomas_2020.ipynb  Amapa_terraclass_mapbiomas_2022.ipynb
Notebooks Google Colab/Análise Uso e Cobertura/: analise_uso_cob_em_municipios.ipynb  extraindo_uso_terra.ipynb  extraindo_uso_terra_mapbiomas.ipynb  extraindo_uso_terra_terraclass.ipynb  mudanca_urbanizacao.ipynb
Notebooks Google Colab/Estudo da urbanização/: mudanca_urbanizacao.ipynb
QML/Classificação Rural e Urbana - IBGE 2023/: brasil_class_rural_urb_ibge-2categorias.qml  brasil_class_rural_urb_ibge-3categorias.qml  brasil_class_rural_urb_ibge-areas_naturais.qml  brasil_class_rural_urb_ibge-cob_uso_natureza.qml  brasil_class_rural_urb_ibge-cob_uso_null_semdomicilios.qml  brasil_class_rural_urb_ibge-cob_uso_rural.qml  brasil_class_rural_urb_ibge-cob_uso_urbano.qml  brasil_class_rural_urb_ibge-fzz_natural.qml  brasil_class_rural_urb_ibge-fzz_rural.qml  brasil_class_rural_urb_ibge-fzz_urbano.qml  brasil_class_rural_urb_ibge-id_geocodigos_tipo.qml  brasil_class_rural_urb_ibge-ocup_rural.qml  (+6 more)
R script faces_logradouros/: .Rhistory  scrip_io.R
basic_access/: Fetching vector layer.ipynb  Infodengue_Geoserver.ipynb
(+21 files in other folders)
